--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest-fetch-mock": "^1.5.0",
     "jsdom": "^11.3.0",
     "material-design-icons": "^3.0.1",
+    "material-icons-react": "^1.0.4",
     "moment": "^2.19.0",
     "node-fetch": "^2.1.1",
     "prop-types": "^15.6.0",
