--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.4",
     "react-dropzone": "^4.2.1",
+    "react-full-screen": "^0.2.4",
     "react-html-parser": "^2.0.1",
     "react-loading-overlay": "^1.0.1",
     "react-redux": "^5.0.6",
